# Dark-Sector

./: Decay.cxx  Decay.cxx~  Decay.h  GNUmakefile  Meson.cxx  Meson.cxx~  README.md  VB.cxx  VB.cxx~
Background/: EWH_FileDescription.txt  EWH_FileDescription.txt~
MediatorVisibleDecay/: .depend  DarkSector_MediatorVisibleDecayDict.cxx  GNUmakefile  LinkDef.h  MediatorDecay.cxx  MediatorDecay.cxx~  MediatorDecay.h  MediatorDecay.h~  MediatorDetectorIntercept.cxx  MediatorDetectorIntercept.cxx~  MediatorDetectorIntercept.h  MediatorDetectorIntercept.h~  MediatorProduction.cxx  MediatorProduction.cxx~  MediatorProduction.h  MediatorProduction.h~  MediatorSelection.cxx  MediatorSelection.cxx~  MediatorSelection.h  MediatorSelection.h~  NeutralMesonProduction.cxx  NeutralMesonProduction.cxx~  NeutralMesonProduction.h  NeutralMesonProduction.h~  SanityPlots.cxx  SanityPlots.cxx~  SanityPlots.h  SanityPlots.h~
SignalMC/: .depend  Base.cxx  Base.h  DarkSector_SignalMCCint.cxx  DarkSector_SignalMCCint.h  Decay.cxx  Decay.cxx~  Decay.h  VB.h  (+27 more)
cryGeantSim/: CMakeLists.txt  GNUmakefile  HOWTORUN.txt  read.cc  user.properties
cryGeantSim/include/: #RunAction.hh#  DetectorConstruction.hh  EventAction.hh  EventAction.hh~  PrimaryGeneratorAction.hh  RunAction.hh  RunAction.hh~  SteppingAction.hh  SteppingAction.hh~  globalish.hh
cryGeantSim/macros/: vis.mac  vis.mac~
cryGeantSim/src/: DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  EventAction.cc~  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~  globalish.cc
(+24 files in other folders)
